# Notebook

./: .gitignore  README.md
doc/: ffmpeg.md  git.md  ios.md  shellscript.md  windows.md
src/2006/C++CLI/PartsCodeList/: CodeList.sln
src/2007/C#/RegexChecker/: RegexChecker.sln
src/2007/C#/WindowsInformation/: WindowsInformation.sln
src/2007/C++/Hanamichi.DirectShow/: Hanamichi.DirectShow.sln
src/2008/C#/PopClient_Test/: PopClient_Test.sln
src/2008/C#/WpfTest/: WpfTest.sln
src/2008/C#/WpfTest2/: WpfTest2.sln
src/2009/C#/Bizeen/: Bizeen.sln
src/2009/C#/CBOStore/: CBOStore.sln
src/2009/C#/CSharpScriptCompiler/: CSharpScriptCompiler.sln
src/2009/C#/FlickrManager/: FlickrManager.sln
src/2009/C#/NetworkTest/: NetworkTest.sln
src/2009/C#/TaskManager/: TaskManager.sln
src/2009/C#/Xsv/: Xsv.sln
src/2009/C++/pic2mov_test/: pic2mov_test.sln
src/2009/Scheme/: test_scheme.ss
src/2010/PowerShell/: adsi_test.ps1  eventlog_export.ps1  test2.ps1  test3.ps1  test4.ps1  test5.ps1
src/2011/C++/: atl_cstring_split.cpp  bmp_file_sample.cpp  dshow_moniker_enumerator.cpp  excel_automation.cpp  ntlm_test.cpp
src/2011/PowerShell/: eventlog_dump.ps1  eventlog_filter.ps1  form_test.ps1  test6.ps1  test7.ps1
src/2011/Scheme/: IronSchemeTest.txt  isodd.ss
src/2012/C#/: exif_test.cs
src/2012/PHP/: php_test.php
src/2012/PowerShell/: random_rename.ps1  xls2csv.ps1
src/2013/C#/: heart_rotation.cs
src/2013/C++/: heart_rotation.cpp
src/2013/JScript/: heart_rotation.js
src/2013/PowerShell/: BOMChecker.ps1  heart_rotation.ps1
src/2013/Ruby/: heart_rotation.rb
src/2013/Scheme/: heart_rotation.ss
src/2014/HLSL/: shader_test.hlsl
src/2016/Java/: StreamSample.java
src/2019/Go/: test1.go  test2.go
src/2019/HTML/: carousel.html
src/2019/TypeScript/: type_test1.ts
src/2020/Bash/: README.md  array.sh  dump_bmp.sh  math.sh  string.sh
src/2021/C++/macos/: CMakeLists.txt  main.cpp  run.sh
src/2021/C++/macos/pipe/: CMakeLists.txt  build.sh  main.cpp
src/2021/C++/macos/shared_memory/: CMakeLists.txt  main.cpp  run.sh
src/2023/C++/img2str/: .gitignore  CMakeLists.txt  main.cpp  types.h
(+1001 files in other folders)
